--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@babel/runtime": "^7.3.4",
     "autoprefixer": "^9.5.0",
     "babel-loader": "^8.0.5",
+    "babel-plugin-inferno": "^6.0.5",
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "inferno": "^7.1.10",
     "mini-css-extract-plugin": "^0.5.0",
     "postcss-csso": "^3.0.0",
     "postcss-loader": "^3.0.0",
+    "shallow-equal": "^1.1.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
