--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "inferno": "^7.1.10",
+    "memoize-one": "^5.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "postcss-csso": "^3.0.0",
     "postcss-loader": "^3.0.0",
