--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "inferno": "^7.1.10",
     "memoize-one": "^5.0.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "pixi.js": "^5.0.0-rc.2",
     "postcss-csso": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "shallow-equal": "^1.1.0",
+    "two.js": "^0.7.0-beta.3",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
