Optimize the value scale text render

--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@babel/plugin-transform-runtime": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/runtime": "^7.3.4",
-    "@pixi/app": "^5.0.0-rc.2",
-    "@pixi/core": "^5.0.0-rc.2",
-    "@pixi/display": "^5.0.0-rc.2",
-    "@pixi/graphics": "^5.0.0-rc.2",
-    "@pixi/text": "^5.0.0-rc.2",
+    "@pixi/app": "^5.0.0-rc.3",
+    "@pixi/core": "^5.0.0-rc.3",
+    "@pixi/display": "^5.0.0-rc.3",
+    "@pixi/graphics": "^5.0.0-rc.3",
+    "@pixi/sprite": "^5.0.0-rc.3",
+    "@pixi/text": "^5.0.0-rc.3",
     "autoprefixer": "^9.5.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-inferno": "^6.0.5",
