--- a/package.json
+++ b/package.json
@@ -40,5 +40,15 @@
   },
   "devDependencies": {
     "webpack-bundle-analyzer": "^3.1.0"
-  }
+  },
+  "browserslist": [
+    "last 2 Chrome versions",
+    "last 2 ChromeAndroid versions",
+    "last 2 Edge versions",
+    "last 2 Firefox versions",
+    "last 2 FirefoxAndroid versions",
+    "last 2 iOS versions",
+    "last 2 Opera versions",
+    "last 2 Safari versions"
+  ]
 }
