--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mini-css-extract-plugin": "^0.5.0",
     "postcss-csso": "^3.0.0",
     "postcss-loader": "^3.0.0",
+    "raw-loader": "^2.0.0",
     "shallow-equal": "^1.1.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
