--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss-loader": "^3.0.0",
     "raw-loader": "^2.0.0",
     "shallow-equal": "^1.1.0",
+    "terser-webpack-plugin": "^1.2.3",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
