--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
     "webpack-bundle-analyzer": "^3.1.0"
   },
   "browserslist": [
-    "last 2 Chrome versions",
-    "last 2 ChromeAndroid versions",
-    "last 2 Edge versions",
-    "last 2 Firefox versions",
-    "last 2 FirefoxAndroid versions",
-    "last 2 iOS versions",
-    "last 2 Opera versions",
-    "last 2 Safari versions"
+    "last 2 Chrome major versions",
+    "last 2 ChromeAndroid major versions",
+    "last 2 Edge major versions",
+    "last 2 Firefox major versions",
+    "last 2 FirefoxAndroid major versions",
+    "last 4 iOS major versions",
+    "last 2 Opera major versions",
+    "last 4 Safari major versions"
   ]
 }
