--- a/package.json
+++ b/package.json
@@ -26,19 +26,19 @@
     "d3-ease": "^1.0.5",
     "html-webpack-plugin": "^3.2.0",
     "memoize-one": "^5.0.4",
-    "mini-css-extract-plugin": "^0.5.0",
+    "mini-css-extract-plugin": "^0.6.0",
     "postcss-csso": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^2.0.0",
     "shallow-equal": "^1.1.0",
     "terser-webpack-plugin": "^1.2.3",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1"
   },
   "devDependencies": {
     "gh-pages": "^2.0.1",
-    "webpack-bundle-analyzer": "^3.2.0"
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-dev-server": "^3.3.1"
   },
   "browserslist": [
     "last 2 years",
